--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -9,11 +9,16 @@
   }
 
   .content {
+    cursor: pointer;
     img {
       border-radius: 10px;
       width: 100%;
       height: 40%;
     }
+  }
+
+  .content:hover {
+    opacity: 0.7;
   }
 
   .footer {
@@ -31,8 +36,9 @@
 
     .caption {
       margin-top: 12px;
-      font-weight: bold;
+      font-weight: bolder;
       font-size: 1.2rem;
+      cursor: pointer;
     }
 
     .time-ago {
